--- a/ifriend/android/local.properties
+++ b/ifriend/android/local.properties
@@ -1,2 +1,2 @@
-flutter.sdk=C:\\Users\\aluno\\flutter
+flutter.sdk=C:\\Users\\Gabriel Santos\\Downloads\\flutter
 sdk.dir=C:\\Users\\aluno\\AppData\\Local\\Android\\Sdk
