--- a/ifriend/pubspec.yaml
+++ b/ifriend/pubspec.yaml
@@ -28,11 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  mysql1: ^0.19.2
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
   path_provider: ^2.0.14
+  
 
 
   # The following adds the Cupertino Icons font to your application.
